--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 
 ## 后端接口公共路径（如果解决跨域问题采用反向代理就只需写公共路径）
 # VITE_BASE_API = 'http://120.79.99.70:8080/api'
-VITE_BASE_API = '/api/'
+VITE_BASE_API = '/api/v1'
 
 ## 路由模式 hash 或 html5
 VITE_ROUTER_HISTORY = 'hash'
